# nightshift

./: .gitignore  README.md  pyproject.toml  refresh.cmd  remove.cmd
config/: nightshift.config.example.json
config/rubrics/: web-ui.example.md
docs/: architecture.md  design.md  plugins.md  verifier-contract.md
examples/: example_verifier_plugin.py  run_web_verifier.py
src/nightshift/: __init__.py  __main__.py  plugins.py  serve.py
src/nightshift/dispatch/: __init__.py  dispatcher.py
src/nightshift/orchestration/: __init__.py  goal_shift.py  goals.py  planner.py  queue.py  records.py  report.py  shift.py
src/nightshift/verifiers/: __init__.py  base.py  capture.py  cli.py  evaluator.py  ios.py  pdf.py  registry.py  web.py
src/nightshift/watchdog/: README.md  __init__.py  __main__.py  nudge_console.ps1  nudger.py  service_watchdog.py  watchdog.py
src/nightshift/worker/: __init__.py  contract.md
tests/: test_dispatcher.py  test_evaluator.py  test_goal_shift.py  test_nudger.py  test_orchestration.py  test_planner.py  test_plugins.py  test_serve.py  test_shift_run.py  test_verifiers.py  test_watchdog.py  test_web_verifier.py
